CSS fix for collapsed filter area

--- a/fuel/modules/fuel/assets/css/fuel.css
+++ b/fuel/modules/fuel/assets/css/fuel.css
@@ -536,7 +536,7 @@ a#multi_delete { display: block; }
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
  }
 .filters .more_filters { max-height: 500px; overflow-y: auto; }
-.filters .more_filters div div { float: left; overflow: hidden; margin-bottom: 7px; min-width: 32%; }
+.filters .more_filters div div { float: left; overflow: hidden; margin-bottom: 7px; min-width: 32%; min-height: 32px; }
 .filters .more_filters .label { font-weight: bold; }
 .filters .more_filters .actions { float: none; }
 .filters .label { width: 75px; }
